XOT-920 - fix spacing style issue in cms article template

--- a/core/sass/pages/_article-detail.scss
+++ b/core/sass/pages/_article-detail.scss
@@ -29,7 +29,6 @@
   .article-content {
     padding-top: 1em;
     line-height: 1.75;
-    padding-bottom: 60px;
   }
 
   img + .video-container {
